infra/cfn/00-network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Rekognition Project - Network Layer (VPC, Subnets, SG)

Parameters:
  ProjectName:
    Type: String
    Default: rekognition-project

  Environment:
    Type: String
    Default: dev

Resources:
  # ---------------------------
  # VPC
  # ---------------------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-vpc"

  # ---------------------------
  # Internet Gateway
  # ---------------------------
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # ---------------------------
  # Subnets
  # ---------------------------
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-public-subnet"

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-private-subnet"

  # ---------------------------
  # Route table
  # ---------------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRoute:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  # ---------------------------
  # Security Groups
  # ---------------------------
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP/HTTPS and SSH
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-web-sg"

  NodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Node/Socket.io port
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-node-sg"

Outputs:
  VPCIdOut:
    Value: !Ref VPC
    Description: VPC ID

  PublicSubnetIdOut:
    Value: !Ref PublicSubnet

  PrivateSubnetIdOut:
    Value: !Ref PrivateSubnet

  WebSecurityGroupIdOut:
    Value: !Ref WebSecurityGroup

  NodeSecurityGroupIdOut:
    Value: !Ref NodeSecurityGroup
